# xsens_reader

./: .gitignore  CMakeLists.txt  README.md
components/: CMakeLists.txt
components/handler/: CMakeLists.txt
components/handler/include/: xsens_reader_handler.h
components/handler/src/: xsens_reader_handler.cpp
components/handler/xsens/lib/: libxkf3hm_filter.so.0.1.0  libxkf3i_filter.so.5.2.0  libxkf700_filter.so.6.0.0  libxkfcore_filter.so.1.0.0  libxsensdeviceapi.so.2021  libxsensdeviceapi.so.2021.0.0  libxstypes.so.2021  libxstypes.so.2021.0.0
include/: xsens_reader.h
src/: main.cpp  xsens_reader.cpp
tests/: CMakeLists.txt  xsens_reader_tests.cpp
